# feedback_analyzer

./: .env.sample  .gitignore  README.md  celery_worker.py  config.py  email_sender.py  logger.py  main.py  models.py  pyproject.toml  routes.py
uploads/: Dummy_Device_Data.xlsx  To-do list.xlsx  Untitled spreadsheet.xlsx  demo-600 - Sheet1.csv  llm_evaluation_filled_template.xlsx  llm_evaluation_template.xlsx
